--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,39 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 
-    <title>Socket.IO chat</title>
+    <title>Socket.IO chatrooms</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      /*button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }*/
+      .input { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;}
+      input { padding: 3px; width: 90%; display: inline-block}
+      .input-btn { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; display: inline-block; border: 1px white solid;}
+      #global { list-style-type: none; margin: 0; padding: 0; }
+      #global li { padding: 5px 10px; }
+      #global li:nth-child(odd) { background: #eee; }
     </style>
   </head>
   <body>
-
+    <nav class="navbar navbar-light bg-faded">
+      <a class="navbar-brand" href="#">Type</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Hall<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="room1" >Join Room</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="leaveRoom">Leave Room</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="exit">Exit Chat</a>
+        </li>
+      </ul>
+    </nav>
     <!-- Modal -->
-    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
-      Enter your username
-    </button>
+    <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">Enter your username</button>
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -40,10 +55,34 @@
       </div>
     </div>
 
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <h4>Global</h4>
+            <ul id="global"></ul>
+          </div>
+        <div class="col-sm-6">
+          <h4>Room</h4>
+          <ul id="room"></ul>
+        </div>
+      </div>
+    </div>
+
+  <div class="input">
+    <div class="">
+      <form id="formGlobal">
+        <input id="inputGlobal" autocomplete="off" />
+        <button class='input-btn' id="sendGlobal">Global</button>
+      </form>
+    </div>
+    <div class="">
+      <form id="formRoom">
+        <input id="inputRoom" autocomplete="off" />
+        <button class='input-btn' id="sendRoom">Room</button>
+      </form>
+    </div>
+  </div>
+
 
     <!--bootstrap-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
